--- a/src/scss/_breadcrumb.scss
+++ b/src/scss/_breadcrumb.scss
@@ -1,3 +1,13 @@
+#admin-dashboard {
+  @include below($laptop) {
+    padding-bottom: 2em;
+  }
+
+  @include above($laptop) {
+    padding-top: 2em;
+  }
+}
+
 #admin-dashboard-nav {
   position: fixed;
   left: 0;
@@ -9,13 +19,21 @@
 
   background-color: white;
   box-shadow: var(--shadow);
-  box-shadow: 0.1875rem 0.375rem 1rem rgba(black, 0.16);
+  box-shadow: $admin-shadow;
 
   font-family: 'Montserrat', sans-serif;
   font-size: 0.625em;
   font-weight: bold;
   text-transform: uppercase;
   line-height: 1.6;
+
+  @include above($laptop) {
+    bottom: auto;
+    top: 0.5em;
+
+    box-shadow: none;
+    font-size: 1em;
+  }
 
   &:before,
   &:after {
@@ -68,6 +86,7 @@
 
       * {
         color: inherit;
+        text-decoration: none;
       }
 
       &:before,
