--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,11 +40,19 @@ $grid-breakpoints: (
 $admin-shadow: 0.1875rem 0.375rem 1rem rgba(black, 0.16);
 
 #admin-dashboard {
-  --secondary: beige;
-  --text: #59553a;
+  --light: GHOSTWHITE;
+  --text: DIMGRAY;
+
+  box-sizing: border-box;
+
+  color: var(--text);
 
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
+
+  * {
+    box-sizing: inherit;
+  }
 }
 
 @import './layout';
