Improve logo placement

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -2,7 +2,7 @@
   .admin-board {
     background-color: white;
 
-    @include below($desktop) {
+    @include between($tablet, $desktop) {
       box-shadow: $admin-shadow;
 
       &.admin-board__small {
@@ -16,6 +16,10 @@
     overflow: auto;
     -webkit-overflow-scrolling: touch;
 
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
     @include above($desktop) {
       border-radius: 1em;
       box-shadow: $admin-shadow;
@@ -27,16 +31,18 @@
     top: 0;
     z-index: 12;
 
-    margin-bottom: 3em;
+    flex: 0 0 auto;
+    margin-bottom: 1em;
     padding: 1em;
-    padding-bottom: 0 !important;
 
     background-color: var(--primary);
 
     font-family: 'Montserrat', sans-serif;
 
     @include above($tablet) {
+      margin-bottom: 3em;
       padding: 2em;
+      padding-bottom: 0 !important;
     }
 
     &:before {
@@ -85,9 +91,16 @@
     }
 
     .admin-board__head-actions {
-      margin-top: -2em;
+      position: absolute;
+      bottom: 0;
+      right: 1em;
+      // margin-top: -2em;
       text-align: right;
       transform: translateY(50%);
+
+      @include above($tablet) {
+        right: 2em;
+      }
 
       .btn {
         margin-left: 0.5em;
@@ -101,10 +114,20 @@
     }
   }
 
+  .admin-board__body {
+    flex: 1 0 auto;
+    padding-bottom: 6em;
+
+    background: white none no-repeat center bottom 1em;
+    background-size: auto 4em;
+  }
+
   .admin-board {
     .admin-board__head {
       &:before {
-        content: '';
+        @include above($tablet) {
+          content: '';
+        }
       }
     }
   }
@@ -139,7 +162,11 @@
     }
 
     .admin-board__body {
+      flex: 1 0 auto;
       padding: 1em;
+
+      background-image: none !important;
+      background-size: 0 0;
 
       @include above($tablet) {
         padding: 2em;
