--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,6 +39,15 @@ $grid-breakpoints: (
 
 $admin-shadow: 0.1875rem 0.375rem 1rem rgba(black, 0.16);
 
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 #admin-dashboard {
   --light: GHOSTWHITE;
   --text: DIMGRAY;
@@ -52,6 +61,10 @@ $admin-shadow: 0.1875rem 0.375rem 1rem rgba(black, 0.16);
 
   * {
     box-sizing: inherit;
+
+    &:not(a) {
+      color: inherit;
+    }
   }
 }
 
