--- a/src/scss/_breadcrumb.scss
+++ b/src/scss/_breadcrumb.scss
@@ -25,7 +25,7 @@
   font-weight: bold;
   text-transform: uppercase;
 
-  transform: rotate(180deg);
+  // transform: rotate(180deg);
 
   @include above($desktop) {
     bottom: auto;
@@ -74,7 +74,7 @@
 
     background-color: white;
 
-    transform: rotate(-180deg);
+    // transform: rotate(-180deg);
 
     .breadcrumb-item {
       position: relative;
