--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -99,6 +99,8 @@
             right: 0.75rem;
             top: 0.75rem;
 
+            padding: 0;
+
             display: block !important;
 
             border-bottom-width: 0;
