Make default children responsive

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -62,6 +62,10 @@
       transform-origin: right top;
     }
 
+    a {
+      color: inherit;
+    }
+
     > *:empty {
       display: none;
     }
