--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -7,9 +7,8 @@
     font-size: 1.2em;
 
     &.active {
-      color: white;
-      background-color: var(--primary);
-      border-color: var(--primary);
+      color: var(--primary);
+      background-color: var(--light);
     }
   }
 }
