--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -57,7 +57,8 @@ $admin-colors: (
   }
 }
 
-#admin-dashboard {
+#admin-dashboard,
+#admin-dashboard__tools {
   @each $var, $color in $admin-colors {
     --#{$var}: #{$color};
   }
@@ -82,6 +83,7 @@ $admin-colors: (
 
 @import './layout';
 @import './breadcrumb';
+@import './tools';
 @import './board';
 @import './menu';
 
