--- a/src/scss/reset/_table.scss
+++ b/src/scss/reset/_table.scss
@@ -90,7 +90,8 @@
             text-transform: uppercase;
           }
 
-          &.adminlist-expand {
+          &.adminlist-expand,
+          &.adminlist-action {
             display: none !important;
           }
 
