--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -109,13 +109,54 @@
       }
 
       .btn {
+        position: relative;
+
+        width: 2.5em;
         margin-left: 0.5em;
+        padding: 0;
 
         color: var(--primary);
         background-color: white;
         border: 0;
-        border-radius: 50%;
+        border-radius: 1.25em;
         box-shadow: $admin-shadow;
+
+        text-align: center;
+        line-height: 2.5;
+
+        &:after {
+          content: attr(title);
+
+          position: absolute;
+          top: 100%;
+          left: 50%;
+
+          max-width: 6rem;
+          margin-top: 0.25rem;
+          padding: 0.125rem 0.5rem;
+
+          color: var(--text);
+          background-color: white;
+          border-radius: var(--radius);
+          box-shadow: $admin-shadow;
+          opacity: 0;
+
+          text-align: center;
+          font-size: 0.8125rem;
+          font-weight: normal;
+          line-height: 1.25;
+
+          transform: translateX(-50%);
+          transition: opacity 0.2s;
+        }
+
+        &:hover {
+          background-color: var(--light);
+
+          &:after {
+            opacity: 1;
+          }
+        }
       }
     }
   }
@@ -195,6 +236,10 @@
           .btn {
             color: white;
             background-color: var(--primary);
+
+            &:hover {
+              color: var(--light);
+            }
           }
         }
       }
