--- a/src/scss/reset/_form.scss
+++ b/src/scss/reset/_form.scss
@@ -17,6 +17,8 @@
     input[type='tel'],
     input[type='email'],
     input[type='password'],
+    input[type='search'],
+    input[type='file'],
     select,
     textarea,
     output {
