--- a/src/scss/reset/_text.scss
+++ b/src/scss/reset/_text.scss
@@ -6,7 +6,8 @@
   text-transform: none;
 }
 
-#admin-dashboard {
+#admin-dashboard,
+.admin-dashboard__style {
   .admin-board__body {
     line-height: 1.44;
 
