--- a/src/scss/reset/_card.scss
+++ b/src/scss/reset/_card.scss
@@ -1,4 +1,5 @@
-#admin-dashboard {
+#admin-dashboard,
+.admin-dashboard__style {
   .card {
     border-color: var(--light);
     border-radius: var(--radius);
