--- a/src/scss/reset/_form.scss
+++ b/src/scss/reset/_form.scss
@@ -1,4 +1,5 @@
-#admin-dashboard {
+#admin-dashboard,
+.admin-dashboard__style {
   .form-group,
   .adminlist-filters {
     label:not(.custom-control-label) {
