--- a/src/scss/reset/_table.scss
+++ b/src/scss/reset/_table.scss
@@ -1,4 +1,5 @@
-#admin-dashboard {
+#admin-dashboard,
+.admin-dashboard__style {
   .table {
     tr {
       border-bottom: 1px solid var(--light);
