--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -151,7 +151,8 @@
           transition: opacity 0.2s;
         }
 
-        &:hover {
+        &:hover,
+        &:focus {
           background-color: var(--light);
 
           &:after {
@@ -238,7 +239,8 @@
             color: white;
             background-color: var(--primary);
 
-            &:hover {
+            &:hover,
+            &:focus {
               color: var(--light);
             }
           }
