--- a/src/scss/reset/_text.scss
+++ b/src/scss/reset/_text.scss
@@ -109,7 +109,8 @@
       background-color: var(--light) !important;
       border: 0;
 
-      &:hover {
+      &:hover,
+      &:focus {
         color: white !important;
         background-color: var(--#{$var}) !important;
       }
@@ -120,7 +121,8 @@
       background-color: transparent !important;
       border: 0;
 
-      &:hover {
+      &:hover,
+      &:focus {
         color: white !important;
         background-color: var(--#{$var}) !important;
       }
