[Board [Actions]] Disable tooltip when no title is set

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -129,7 +129,7 @@
         text-align: center;
         line-height: 2.5;
 
-        &:after {
+        &[title]:after {
           content: attr(title);
 
           position: absolute;
