--- a/src/scss/reset/_form.scss
+++ b/src/scss/reset/_form.scss
@@ -33,7 +33,7 @@
 
       font-size: 1rem;
 
-      transition: background 0.3s ease-out;
+      transition: background-color 0.3s ease-out;
 
       &:not(:disabled):focus {
         color: white !important;
