--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -17,7 +17,8 @@
     max-width: 100%;
     max-height: 100%;
 
-    transition: margin-left 0.5s ease-out;
+    transition: margin-left 0.5s ease-out 0s, max-width 0.5s ease-in 0s, flex 0.5s ease-in 0s;
+    transform: translate3d(0, 0, 0);
 
     @include below($tablet) {
       &:not(.admin-board__full) {
