--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -6,7 +6,7 @@
   flex-wrap: nowrap;
   overflow: hidden;
 
-  transition: 0.3s;
+  transition: $admin-timing;
 }
 
 #admin-dashboard,
@@ -17,8 +17,15 @@
     max-width: 100%;
     max-height: 100%;
 
-    transition: margin-left 0.5s ease-out 0s, max-width 0.5s ease-in 0s, flex 0.5s ease-in 0s;
+    transition-property: margin-left, max-width, flex;
+    transition-duration: $admin-timing;
+    transition-timing-function: ease-out;
+    transition-delay: $admin-timing, 0s, 0s;
     transform: translate3d(0, 0, 0);
+
+    &:first-of-type {
+      transition-delay: 0s;
+    }
 
     @include below($tablet) {
       &:not(.admin-board__full) {
