--- a/src/scss/_tools.scss
+++ b/src/scss/_tools.scss
@@ -16,7 +16,7 @@
     height: 70vh;
     padding: 2em;
 
-    background-color: white;
+    background-color: var(--snow);
 
     flex-direction: column;
     align-items: flex-end;
