--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -10,7 +10,7 @@
 #admin-dashboard,
 .admin-dashboard__style {
   .admin-board {
-    background-color: white;
+    background-color: var(--snow);
 
     @include between($tablet, $desktop) {
       box-shadow: $admin-shadow;
@@ -82,7 +82,7 @@
 
     .admin-board__head-title,
     .admin-board__head-content {
-      color: white;
+      color: var(--snow);
     }
     .admin-board__head-title {
       margin: 0 !important;
@@ -123,7 +123,7 @@
         padding: 0;
 
         color: var(--primary);
-        background-color: white;
+        background-color: var(--snow);
         border: 0;
         border-radius: 1.25em;
         box-shadow: $admin-shadow;
@@ -143,7 +143,7 @@
           padding: 0.125rem 0.5rem;
 
           color: var(--text);
-          background-color: white;
+          background-color: var(--snow);
           border-radius: var(--radius);
           box-shadow: $admin-shadow;
           opacity: 0;
@@ -175,7 +175,7 @@
     flex: 1 0 auto;
     padding-bottom: 6em;
 
-    background: white none no-repeat center bottom 1em;
+    background: var(--snow) none no-repeat center bottom 1em;
     background-size: auto 4em;
 
     &:after {
@@ -192,8 +192,8 @@
       margin-top: -1em;
 
       border: 1em solid var(--primary);
-      border-top-color: white;
-      border-bottom-color: white;
+      border-top-color: var(--snow);
+      border-bottom-color: var(--snow);
       border-radius: 1em;
       opacity: 0;
 
@@ -233,7 +233,7 @@
   .admin-board__full {
     @include above($tablet) {
       .admin-board__head {
-        background-color: white;
+        background-color: var(--snow);
 
         &:after {
           content: '';
@@ -246,7 +246,7 @@
 
           height: 4em;
 
-          background-image: linear-gradient(white, rgba(white, 0));
+          background-image: linear-gradient(var(--snow), transparent);
 
           pointer-events: none;
         }
@@ -260,7 +260,7 @@
           z-index: 2;
 
           .btn {
-            color: white;
+            color: var(--snow);
             background-color: var(--primary);
 
             &:hover,
