--- a/src/scss/reset/_alert.scss
+++ b/src/scss/reset/_alert.scss
@@ -19,7 +19,7 @@
 
     overflow: hidden;
 
-    background-color: white !important;
+    background-color: var(--snow) !important;
     box-shadow: $admin-shadow;
     border-width: 0 !important;
     border-radius: var(--radius) !important;
@@ -49,7 +49,7 @@
       margin-left: -1.5em;
       margin-right: 0.5em;
 
-      color: white;
+      color: var(--snow);
 
       font-size: 2em;
     }
