--- a/src/scss/reset/_form.scss
+++ b/src/scss/reset/_form.scss
@@ -36,13 +36,13 @@
       transition: background-color $admin-timing / 2 ease-out;
 
       &:not(:disabled):focus {
-        color: white !important;
+        color: var(--snow) !important;
         background-color: var(--primary) !important;
       }
 
       &:disabled,
       &:read-only {
-        background-color: white !important;
+        background-color: var(--snow) !important;
         border: 1px solid var(--light) !important;
       }
     }
@@ -66,7 +66,7 @@
 
       .input-group-append,
       .input-group-prepend {
-        color: white;
+        color: var(--snow);
         background-color: var(--primary);
         border: 0 !important;
       }
