--- a/src/scss/_breadcrumb.scss
+++ b/src/scss/_breadcrumb.scss
@@ -121,6 +121,9 @@
         margin-left: -0.2em;
         padding-left: 2em;
 
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+
         &:after {
           content: '';
 
