--- a/src/scss/reset/_form.scss
+++ b/src/scss/reset/_form.scss
@@ -35,9 +35,8 @@
 
       transition: background-color $admin-timing / 2 ease-out;
 
-      &:not(:disabled):focus {
-        color: var(--snow) !important;
-        background-color: var(--primary) !important;
+      &:not(textarea):not(:disabled):focus {
+        color: var(--primary) !important;
       }
 
       &:disabled,
@@ -137,45 +136,72 @@
       }
     }
 
-    .input-group {
+    .input-group,
+    .btn-group {
       .form-control,
       .btn {
         border-radius: 0 !important;
+
+        &:first-child {
+          border-top-left-radius: var(--radius) !important;
+          border-bottom-left-radius: var(--radius) !important;
+        }
+
+        &:last-child {
+          border-top-right-radius: var(--radius) !important;
+          border-bottom-right-radius: var(--radius) !important;
+        }
       }
     }
   }
 
-  .md-preview {
-    > .text.md-preview-content {
-      position: relative;
+  .md-editor {
+    .md-editor__head {
+      position: -webkit-sticky;
+      position: sticky;
 
-      max-height: 70vh;
-      padding: 0.75em 0.5em;
+      .btn-group {
+        + .btn-group {
+          margin-left: 0.5em;
+        }
+      }
 
-      color: var(--text);
-      border: 1px solid var(--light);
-      border-radius: var(--radius);
+      .md-editor__toggle {
+        @include above($laptop) {
+          display: none;
+        }
+      }
+    }
 
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
-      -ms-overflow-style: -ms-autohiding-scrollbar;
+    .md-editor__body {
+      height: 70vh;
 
-      font-size: 0.875rem;
+      display: flex;
+      overflow: hidden;
 
-      &:before {
-        content: 'preview';
-        position: absolute;
-        top: 50%;
-        left: 50%;
+      .md-editor__input,
+      .md-editor__preview {
+        flex: 0 0 100%;
+        height: 100%;
+        max-height: none;
 
-        color: var(--text);
-        opacity: 0.05;
+        overflow: auto;
 
-        font-size: 2em;
-        font-weight: bold;
-        text-transform: uppercase;
+        border-radius: 0 !important;
 
-        transform: translate(-50%, -50%) rotate(-30deg);
+        transition: margin-left $admin-timing ease 0s;
+
+        @include above($laptop) {
+          flex-shrink: 1;
+        }
+      }
+
+      @include below($laptop) {
+        &.md-editor__toggle-preview {
+          .md-editor__input {
+            margin-left: -100%;
+          }
+        }
       }
     }
   }
