Add BoardList components

--- a/src/scss/_board.scss
+++ b/src/scss/_board.scss
@@ -25,6 +25,7 @@
       .admin-board__small-body__hidden {
         max-height: 0;
         opacity: 0;
+        display: none;
       }
     }
   }
