--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -112,6 +112,7 @@ $admin-colors__dark: (
 @import './tools';
 @import './board';
 @import './menu';
+@import './list';
 
 @import './reset/table';
 @import './reset/text';
